[package]
name = "abstract-ws-tungstenite"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
ws = "0.9.1"
abstract-ws = { git = "https://github.com/noocene/abstract-ws" }
tokio-tungstenite = "0.10.1"
tungstenite = "0.10.1"
async-std = "1.6.0"
tokio = { version = "0.2.21", default-features = false }
futures = { version = "0.3.5", default-features = false }
thiserror = "1.0.19"
pin-utils = "0.1.0"
