[package]
name = "abstract-ws-tungstenite"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
ws = "0.9.1"
abstract-ws = { git = "https://github.com/noocene/abstract-ws" }
tokio-tungstenite = "0.10.1"
tungstenite = "0.10.1"
async-std-dep = { version = "1.6.0", optional = true, package = "async-std" }
tokio = { version = "0.2.21", default-features = false }
futures = { version = "0.3.5", default-features = false }
pin-utils = "0.1.0"
core-error = { git = "https://github.com/core-error/core-error" }
thiserror = { git = "https://github.com/noocene/thiserror" }
smol-dep = { version = "0.1.11", optional = true, package = "smol" }
async-tls = { version = "0.7.0", optional = true }
rustls = { version = "0.17.0", optional = true }

[features]
async_std = ["async-std-dep"]
smol = ["smol-dep"]
tls = ["async-tls", "rustls"]
